replaced commons-lang with commons-lang3